[gd_scene load_steps=10 format=2]

[ext_resource path="res://MainGame.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Snake_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Graphics/apple.png" type="Texture" id=3]
[ext_resource path="res://Graphics/grass.png" type="Texture" id=4]
[ext_resource path="res://Score.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sound/crunch.wav" type="AudioStream" id=6]
[ext_resource path="res://Graphics/rotten_apple.png" type="Texture" id=7]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="TileSet" id=1]
0/name = "Snake_spritesheet.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 320, 80 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 2, 1 )
0/autotile/tile_size = Vector2( 40, 40 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "apple.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 40, 40 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 40, 40 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "rotten_apple.png 2"
2/texture = ExtResource( 7 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 40, 40 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 40, 40 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 2 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[node name="MainGame" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 800.0
margin_bottom = 800.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="SnakeApple" type="TileMap" parent="." groups=["RottenApple"]]
tile_set = SubResource( 1 )
cell_size = Vector2( 40, 40 )
show_collision = true
collision_layer = 4
format = 1

[node name="SnakeTick" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Score" parent="." instance=ExtResource( 5 )]

[node name="CrounchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="timeout" from="SnakeTick" to="." method="_on_SnakeTick_timeout"]
